#2 로그아웃 기능을 위한 커스텀 다이얼로그 제작

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.My_PromisePlan">
         <activity
+            android:name=".dialogs.CustomAlertDialog"
+            android:exported="false" />
+        <activity
             android:name=".fragments.SetiingsFragment"
             android:exported="false" />
         <activity
