#2 친구 추가밑 목록을 보여줄 액티비티 생성

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,8 +3,7 @@
     package="com.nepplus.my_promiseplan">
 
     <uses-permission android:name="android.permission.INTERNET" />
-    
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -13,6 +12,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.My_PromisePlan">
+        <activity
+            android:name=".settings.MyFriendsActivity"
+            android:exported="false" />
         <activity
             android:name=".dialogs.CustomAlertDialog"
             android:exported="false" />
