#2 친구 검색 Activity 완료

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.My_PromisePlan">
         <activity
+            android:name=".settings.AddFriendsActivity"
+            android:exported="false" />
+        <activity
             android:name=".settings.MyFriendsActivity"
             android:exported="false" />
         <activity
