--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,4 +62,6 @@ dependencies {
 
     //    TedPermission
     implementation 'io.github.ParkSangGwon:tedpermission-normal:3.3.0'
+
+    implementation "com.kakao.sdk:v2-user:2.10.0" // 카카오 로그인
 }
