--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:name=".MyPromisePlan"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.My_PromisePlan">
@@ -17,12 +18,6 @@
             android:exported="false" />
         <activity
             android:name=".settings.MyFriendsActivity"
-            android:exported="false" />
-        <activity
-            android:name=".dialogs.CustomAlertDialog"
-            android:exported="false" />
-        <activity
-            android:name=".fragments.SetiingsFragment"
             android:exported="false" />
         <activity
             android:name=".main.signup.SignUpActivity"
@@ -41,7 +36,24 @@
         </activity>
         <activity
             android:name=".main.MainActivity"
-            android:exported="false" />
+            android:exported="false" >
+        </activity>
+        <activity
+            android:name="com.kakao.sdk.auth.AuthCodeHandlerActivity"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+
+                <!-- Redirect URI: "kakao${NATIVE_APP_KEY}://oauth" -->
+                <data
+                    android:host="oauth"
+                    android:scheme="kakao94464b925fe5735e13b18e1c8a8512a8" />
+            </intent-filter>
+        </activity>
+
     </application>
 
 </manifest>
