--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,4 +64,7 @@ dependencies {
     implementation 'io.github.ParkSangGwon:tedpermission-normal:3.3.0'
 
     implementation "com.kakao.sdk:v2-user:2.10.0" // 카카오 로그인
+
+    //    FlowLayout
+    implementation 'com.nex3z:flow-layout:1.3.3'
 }
