--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.My_PromisePlan">
         <activity
+            android:name=".settings.MyPlanList"
+            android:exported="false" />
+        <activity
+            android:name=".settings.MyPlanActivity"
+            android:exported="false" />
+        <activity
             android:name=".ui.EditAppointmentActivity"
             android:exported="false" />
         <activity
@@ -39,7 +45,7 @@
         </activity>
         <activity
             android:name=".main.MainActivity"
-            android:exported="false"></activity>
+            android:exported="false" />
         <activity
             android:name="com.kakao.sdk.auth.AuthCodeHandlerActivity"
             android:exported="true">
