--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.My_PromisePlan">
         <activity
+            android:name=".settings.MyPlan"
+            android:exported="false" />
+        <activity
             android:name=".settings.ChangePassword"
             android:exported="false" />
         <activity
